--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div id="map"></div>
     <script
+        async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5YF0g_YainJEQN3OPuOui4XpC9IRhvrU&callback=initMap&v=weekly"
-        defer
     ></script>
 </body>
 </html>
