--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 </head>
 <body>
+    <header>
+        <div><a href="ratingForm.html">Form</a></div>
+    </header>
     <div id="map"></div>
     <script
         async
