Boilerplate for rating form

--- a/ratingForm.html
+++ b/ratingForm.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="formStyles.css">
+    <script src = "formScript.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <div>Rating form</div>
+    <div>Water fountain rating form</div>
     <select name="Water Fountains" id="Water Fountains">
         <option value="New Cabell Hall">New Cabell Hall</option>
         <option value="Rice Hall">Rice Hall</option>
         <option value="Clemons Library">Clemons Library</option>
     </select>
-    <input name="Rating">
+    <input name="Temperature rating" placeholder="temp">
+    <input name="Water flow rating" placeholder="flow"> 
     <button type="submit">Submit</button>
 </body>
 </html>
