Button to go back to the map from the form page

--- a/ratingForm.html
+++ b/ratingForm.html
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div><a href="index.html">Map</a></div>
+    </header>
     <div>Water fountain rating form</div>
     <select name="Water Fountains" id="Water Fountains">
         <option value="New Cabell Hall">New Cabell Hall</option>
