--- a/ratingForm.html
+++ b/ratingForm.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="formStyles.css">
     <script src = "formScript.js"></script>
+    <script src="https://kit.fontawesome.com/f7bac7fe3b.js" crossorigin="anonymous"></script>
     <title>Water fountain rating form</title>
 </head>
 <body>
@@ -19,6 +20,18 @@
             <option value="Rice Hall">Rice Hall</option>
             <option value="Clemons Library">Clemons Library</option>
         </select>
+        <div class="tempContainer">
+            <input type="radio" id="temp5" name="temp"> 
+            <label for="temp5" class="fas fa-star"></label>
+            <input type="radio" id="temp4" name="temp"> 
+            <label for="temp4" class="fas fa-star"></label>
+            <input type="radio" id="temp3" name="temp"> 
+            <label for="temp3" class="fas fa-star"></label>
+            <input type="radio" id="temp2" name="temp"> 
+            <label for="temp2" class="fas fa-star"></label>
+            <input type="radio" id="temp1" name="temp"> 
+            <label for="temp1" class="fas fa-star"></label>
+        </div>
         <input type="number" id="temp" name="temp" placeholder="Temperature rating (1-5)" min="1" max="5"> 
         <input type="number" id="flow" name="flow" placeholder="Flow rating (1-5)" min="1" max="5"> 
         <button type="submit" id="submit">Submit</button>
