--- a/ratingForm.html
+++ b/ratingForm.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <img class="logo" src="logo.png" alt="logo">
         <div><a href="index.html">Map</a></div>
     </header>
     <form onsubmit = "collectData()">
