Header kind of set up on form

--- a/ratingForm.html
+++ b/ratingForm.html
@@ -11,8 +11,14 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="logo.png" alt="logo">
-        <div><a href="index.html">Map</a></div>
+        <img class="logo" src="images/logo.png" alt="logo">
+        <div class="navbarLinks">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Rate a water fountain</a></li>
+                <li><a href="#">Missing a water fountain?</a></li>
+            </ul>
+        </div>
     </header>
     <form onsubmit = "collectData()">
         <h2>Rate a water fountain</h2>
