Header looking good on home page and rating form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 </head>
 <body>
     <header>
-        <div><a href="ratingForm.html">Form</a></div>
+        <img class="logo" src="images/logo.png" alt="logo">
+        <div class="navbarLinks">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="ratingForm.html">Rate a water fountain</a></li>
+                <li><a href="#">Missing a water fountain?</a></li>
+            </ul>
+        </div>
     </header>
     <div id="map"></div>
     <script
