--- a/ratingForm.html
+++ b/ratingForm.html
@@ -15,7 +15,7 @@
         <div class="navbarLinks">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Rate a water fountain</a></li>
+                <li><a href="ratingForm.html">Rate a water fountain</a></li>
                 <li><a href="#">Missing a water fountain?</a></li>
             </ul>
         </div>
