--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ratingForm.html">Rate a water fountain</a></li>
-                <li><a href="#">Missing a water fountain?</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </header>
