--- a/ratingForm.html
+++ b/ratingForm.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/logo.png" alt="logo">
+        <a href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a>
         <div class="navbarLinks">
             <ul>
                 <li><a href="index.html">Home</a></li>
