--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UVA Water</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src = "script.js"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <link rel="stylesheet" href="contactStyles.css">
+    <script src="contact.js"></script>
+    <title>Contact form</title>
 </head>
 <body>
     <header>
@@ -20,10 +19,10 @@
             </ul>
         </div>
     </header>
-    <div id="map"></div>
-    <script
-        async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5YF0g_YainJEQN3OPuOui4XpC9IRhvrU&callback=initMap&v=weekly"
-    ></script>
+    <form onsubmit = "sendEmail()">
+        <h2>Contact form</h2>
+        <input type="text" id="input" placeholder="Enter text here" required>
+        <button type="submit" id="submit">Submit</button>
+    </form>
 </body>
 </html>
