Contact form html/css complete

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,9 @@
         </div>
     </header>
     <form onsubmit = "sendEmail()">
-        <h2>Contact form</h2>
-        <input type="text" id="input" placeholder="Enter text here" required>
+        <h1>Contact form</h1>
+        <div class="displayMessage">Feel free to report any missing water fountains or any other concerns here</div>
+        <textarea id="input" placeholder="Enter message here" required></textarea>
         <button type="submit" id="submit">Submit</button>
     </form>
 </body>
