--- a/ratingForm.html
+++ b/ratingForm.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <form onsubmit = "collectData()">
-        <h2>Rate a water fountain</h2>
+        <h1>Water fountain rating form</h1>
         <select name="fountain" id="fountain">
             <option value="New Cabell Hall">New Cabell Hall</option>
             <option value="Rice Hall">Rice Hall</option>
