--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>UVA Water</title>
     <link rel="stylesheet" href="styles.css">
     <script src = "script.js"></script>
+    <script src = "waterFountainData.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 </head>
 <body>
