Separated building and fountain in rating form

--- a/ratingForm.html
+++ b/ratingForm.html
@@ -23,8 +23,10 @@
     </header>
     <form onsubmit = "collectData()">
         <h1>Water fountain rating form</h1>
-        <select name="fountain" id="fountainSelect">
-        </select>
+        <h3>Building:</h3>
+        <select name="buildingSelect" id="buildingSelect"></select>
+        <h3>Water fountain:</h3>
+        <select name="fountaiSelect" id="fountainSelect"></select>
         <h3>Temperature rating:</h3>
         <div class="tempContainer">
             <input type="radio" name="temp" id="temp5"> 
