Renamed and moved everything

--- a/src/contactForm.html
+++ b/src/contactForm.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contactStyles.css">
-    <script src="contact.js"></script>
+    <link rel="stylesheet" href="contactFormStyles.css">
+    <script src="contactFormScript.js"></script>
     <title>Contact form</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a>
+        <a href="homePage.html"><img class="logo" src="../images/logo.png" alt="logo"></a>
         <div class="navbarLinks">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="homePage.html">Home</a></li>
                 <li><a href="ratingForm.html">Rate a water fountain</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contactForm.html">Contact</a></li>
             </ul>
         </div>
     </header>
