--- a/src/homePage.html
+++ b/src/homePage.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UVA Water</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src = "script.js"></script>
+    <link rel="stylesheet" href="homePageStyles.css">
+    <script src = "homePageScript.js"></script>
     <script src = "waterFountainData.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a>
+        <a href="homePage.html"><img class="logo" src="../images/logo.png" alt="logo"></a>
         <div class="navbarLinks">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="homePage.html">Home</a></li>
                 <li><a href="ratingForm.html">Rate a water fountain</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contactForm.html">Contact</a></li>
             </ul>
         </div>
     </header>
