--- a/src/ratingForm.html
+++ b/src/ratingForm.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="formStyles.css">
-    <script src = "formScript.js" defer></script>
+    <link rel="stylesheet" href="ratingFormStyles.css">
+    <script src = "ratingFormScript.js" defer></script>
     <script src = "waterFountainData.js"></script>
     <script src="https://kit.fontawesome.com/f7bac7fe3b.js" crossorigin="anonymous"></script>
     <title>Water fountain rating form</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a>
+        <a href="homePage.html"><img class="logo" src="../images/logo.png" alt="logo"></a>
         <div class="navbarLinks">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="homePage.html">Home</a></li>
                 <li><a href="ratingForm.html">Rate a water fountain</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contactForm.html">Contact</a></li>
             </ul>
         </div>
     </header>
