Manually put review into sql for rice 1

--- a/src/ratingForm.html
+++ b/src/ratingForm.html
@@ -26,7 +26,7 @@
         <h3>Building:</h3>
         <select name="buildingSelect" id="buildingSelect"></select>
         <h3>Water fountain:</h3>
-        <select name="fountaiSelect" id="fountainSelect"></select>
+        <select name="fountainSelect" id="fountainSelect"></select>
         <h3>Temperature rating:</h3>
         <div class="tempContainer">
             <input type="radio" name="temp" id="temp5"> 
