--- a/client/homePage.html
+++ b/client/homePage.html
@@ -9,6 +9,7 @@
     <script src = "homePageScript.js"></script>
     <script src = "waterFountainData.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 </head>
 <body>
     <header>
