Fixed naming and logo for netlify

--- a/client/index.html
+++ b/client/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UVA Water</title>
-    <link rel="stylesheet" href="homePageStyles.css">
-    <script src = "homePageScript.js"></script>
+    <link rel="stylesheet" href="indexStyles.css">
+    <script src = "indexScript.js"></script>
     <script src = "waterFountainData.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 </head>
 <body>
     <header>
-        <a href="homePage.html"><img class="logo" src="../client/images/logo.png" alt="logo"></a>
+        <a href="index.html"><img class="logo" src="../images/logo.png" alt="logo"></a>
         <div class="navbarLinks">
             <ul>
-                <li><a href="homePage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="ratingForm.html">Rate a water fountain</a></li>
                 <li><a href="contactForm.html">Contact</a></li>
             </ul>
