--- a/client/contactForm.html
+++ b/client/contactForm.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <a href="homePage.html"><img class="logo" src="../client/images/logo.png" alt="logo"></a>
+        <a href="index.html"><img class="logo" src="../images/logo.png" alt="logo"></a>
         <div class="navbarLinks">
             <ul>
-                <li><a href="homePage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="ratingForm.html">Rate a water fountain</a></li>
                 <li><a href="contactForm.html">Contact</a></li>
             </ul>
