--- a/client/contactForm.html
+++ b/client/contactForm.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="../images/logo.png" alt="logo"></a>
+        <a href="index.html"><img class="logo" src="./images/logo.png" alt="logo"></a>
         <div class="navbarLinks">
             <ul>
                 <li><a href="index.html">Home</a></li>
