--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,12 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="../images/logo.png" alt="logo"></a>
+        <a href="index.html"><img class="logo" src="./images/logo.png" alt="logo"></a>
+        <a href="#" class="hamburgerToggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
         <div class="navbarLinks">
             <ul>
                 <li><a href="index.html">Home</a></li>
