--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UVA Water</title>
     <link rel="stylesheet" href="indexStyles.css">
-    <script src = "indexScript.js"></script>
+    <script src = "indexScript.js" defer></script>
     <script src = "waterFountainData.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="index.html"><img class="logo" src="./images/logo.png" alt="logo"></a>
-        <a href="#" class="hamburgerToggle">
+        <a href="#" class="hamburgerToggle" id="hamburgerToggle">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
