Added working hamburger to rating form

--- a/client/ratingForm.html
+++ b/client/ratingForm.html
@@ -14,6 +14,11 @@
 <body>
     <header>
         <a href="index.html"><img class="logo" src="./images/logo.png" alt="logo"></a>
+        <a href="#" class="hamburgerToggle" id="hamburgerToggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
         <div class="navbarLinks">
             <ul>
                 <li><a href="index.html">Home</a></li>
