--- a/client/contactForm.html
+++ b/client/contactForm.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contactFormStyles.css">
-    <script src="contactFormScript.js"></script>
+    <script src="contactFormScript.js" defer></script>
     <title>Contact form</title>
 </head>
 <body>
     <header>
         <a href="index.html"><img class="logo" src="./images/logo.png" alt="logo"></a>
+        <a href="#" class="hamburgerToggle" id="hamburgerToggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
         <div class="navbarLinks">
             <ul>
                 <li><a href="index.html">Home</a></li>
