--- a/client/contactForm.html
+++ b/client/contactForm.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contactFormStyles.css">
     <script src="contactFormScript.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <title>Contact form</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
     <form onsubmit = "sendEmail()">
         <h1>Contact form</h1>
         <div class="displayMessage">Feel free to report any missing water fountains or any other concerns here</div>
-        <textarea id="input" placeholder="Enter message here" required></textarea>
+        <textarea id="message" placeholder="Enter message here" required></textarea>
         <button type="submit" id="submit">Submit</button>
     </form>
 </body>
