Created an icon for the site

--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UVA Water</title>
+    <link rel="icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="indexStyles.css">
     <script src = "indexScript.js" defer></script>
     <script src = "waterFountainData.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <title>UVA Water</title>
 </head>
 <body>
     <header>
