--- a/client/contactForm.html
+++ b/client/contactForm.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="contactFormStyles.css">
     <script src = "contactFormScript.js" defer></script>
     <script src = "waterFountainData.js"></script>
