Fixed issue where map sometimes wouldn't load

--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
     </header>
     <div id="map"></div>
     <script
-        async
+        defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5YF0g_YainJEQN3OPuOui4XpC9IRhvrU&callback=initMap&v=weekly"
     ></script>
 </body>
