fixed env not being read in

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="indexStyles.css">
     <script src = "indexScript.js" defer></script>
     <script src = "waterFountainData.js"></script>
+    <script src = "env.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <title>UVA Water</title>
