--- a/client/contactForm.html
+++ b/client/contactForm.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="contactFormStyles.css">
     <script src = "contactFormScript.js" defer></script>
     <script src = "waterFountainData.js"></script>
+    <script src = "env.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <title>Contact form</title>
 </head>
